# F1-Card-Game-MCP-Server

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  main.py  na.py  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 7cd49b61eead_add_on_delete_cascade_to_all_fks.py  92af4051fd0c_add_password_hash_to_users.py  ab81a37daef0_add_description_to_tracks.py  bfe4a3a75c69_create_all_tables.py
src/data/: constants.py  seed_data.py
src/models/: __init__.py  base.py  country.py  driver.py  game.py  relations.py  skill.py  team.py  track.py  user.py
src/resources/: game_resources.py
src/services/: fetch_service.py  game_service.py  power_service.py  query_service.py  seed_service.py
src/tools/: game_tools.py  query_tools.py  user_tools.py
tests/: conftest.py
tests/functional/: test_auth_flow.py  test_game_flow.py
tests/unit/: test_auth.py  test_constants.py  test_fetch_service.py  test_game_service.py  test_power_service.py  test_query_service.py  test_resources.py  test_user_tools.py
