[project]
name = "f1-mcp-server"
version = "0.1.0"
description = "An F1 data intelligence MCP server powered by FastF1 and PostgreSQL"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Naman" }]

dependencies = [
    "fastmcp>=3.0.0",
    "fastf1>=3.4.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.48",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "python-dotenv>=1.2.2",
    "greenlet>=3.3.2",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
